@startuml

title __CONTROLLER's Class Diagram__\n

  namespace  Controller{
    namespace Controller {
      class Controller.Controller {
          ~ continentName : String
          ~ countryName : String
          ~ editPlayerFinished : boolean
          ~ mapFile : String
          ~ neighborCountryName : String
          ~ playerName : String
          {static} + main()
          ~ checkValidityOfTasksList()
          ~ cmdController()
          ~ getCommand()
      }
    }
  }
  

  namespace  Controller{
    namespace Controller {
      class Controller.ExtractedTasks {
          + taskData : ArrayList<String>
          + ExtractedTasks()
      }
    }
  }
  

  namespace  Controller{
    namespace Controller {
      enum tasksEnum {
        addcontinent
        addcountry
        addneighbor
        addplayer
        alloutattack
        editmap
        exchangecards
        fortify
        ignoreattack
        ignoreexchangecards
        ignorefortify
        loadmap
        normalattack
        placeall
        placearmy
        populatecountries
        reinforce
        removecontinent
        removecountry
        removeneighbor
        removeplayer
        savemap
        showmap
        unknown
        validatemap
      }
    }
  }
  

  Controller.Controller o-- Controller.tasksEnum : currentTask
  Controller.Controller o-- Model.GamePlay : gamePlayObj
  Controller.ExtractedTasks o-- Controller.tasksEnum : name


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
